tests/ui/ferrocene/compiler-arguments/print/print_no-option_print_no-option.rs
//@ check-fail
//@ compile-flags: --print --print
//~? ERROR unknown print request

fn main() {}

// ferrocene-annotations: um_rustc_print
